# omni-node

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  coverage.xml  pyproject.toml  start-quick.bat  start-quick.sh  start.bat  start.sh
.github/workflows/: QUICKREF.md  README.md  WORKFLOWS.md  ci.yml  pypi.yml  security.yml  testpypi.yml  unit-tests.yml
backend/: __init__.py  main.py
backend/api/: servers.py  tools.py
backend/core/: config.py  database.py  security.py
backend/models/: models.py
backend/schemas/: schemas.py
backend/services/: mcp_client.py  namespace_resolver.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLES.md  LAUNCHER.md  SETUP.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: setup.py
src/omni_node/: __init__.py
tests/: __init__.py  test_api_servers.py  test_api_tools.py  test_config.py  test_database.py  test_main.py  test_mcp_client.py  test_namespace_resolver.py  test_package.py  test_sample.py  test_schemas.py  test_security.py
