[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-node"
version = "0.2.0"
description = "OmniNode - A universal MCP client with slash-command interface"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "OmniNode Contributors", email = "contact@omninode.dev"}
]
maintainers = [
    {name = "OmniNode Contributors", email = "contact@omninode.dev"}
]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai",
    "llm",
    "fastapi",
    "client",
    "universal-client",
    "slash-commands",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0,<5.0.0",
    "passlib>=1.7.4",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ShanKonduru/omni-node"
Documentation = "https://github.com/ShanKonduru/omni-node/blob/main/README.md"
Repository = "https://github.com/ShanKonduru/omni-node"
Issues = "https://github.com/ShanKonduru/omni-node/issues"
Changelog = "https://github.com/ShanKonduru/omni-node/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "bandit[toml]>=1.7.9",
    "pip-audit>=2.7.0",
    "pylint>=3.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=backend --cov=src --cov-report=term-missing --cov-report=xml"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend", "src"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
